--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # ignore everything in the root except the "wp-content" directory.
 !wp-content/
 
+#Adding config.py
+config.py
+
 # ignore everything in the "wp-content" directory, except:
 # "mu-plugins", "plugins", "themes" directory
 wp-content/*
@@ -17,7 +20,5 @@ wp-content/themes/twenty*/
 # ignore node dependency directories
 node_modules/
 
-# ignore log files and databases
+# ignore log files
 *.log
-*.sql
-*.sqlite
